[ Bug fix ] : dark theme fixes (#5164)
* Close button for filter is not visible in dark mode.

* fixed : Hovering on dark mode selector is showing cursor instead of mouse pointer

* bug fixed

* bug fixes : dark theme

* fix : dark theme issue in search box and add page field in Pages

* bug fixed : serachbox in pages remains in dark theme only

* fixed properties and style tab bg in dark theme for the widget inspector

--- a/frontend/src/_styles/popover.scss
+++ b/frontend/src/_styles/popover.scss
@@ -9,7 +9,7 @@
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
   box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
-  border-radius: 8px;
+  border-radius: 0 8px 8px 0;
   overflow: auto;
 }
 
@@ -100,5 +100,9 @@
   }
   .card-body{
     color: #C0C8CC !important;
+  }
+  &::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
   }
 }
